--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
             </optgroup>
             <optgroup label="Espacios públicos, seguridad, recreación"></optgroup>
             <option id="DIST_EP" value="DIST_EP">Proximidad espacio público</option>  
+            <option id="M2_ESP_EP" value="M2_ESP_EP">M² per capita de espacio público</option> 
             <option id="PobXHas" value="PobXHas" selected>Densidad residencial</option> 
+            <option id="Shannon" value="Shannon">Diversidad usos del suelo</option> 
             </optgroup> 
             <optgroup label="Oportunidades económicas"></optgroup>
             <option id="T_Desemp" value="T_Desemp">Tasa de desempleo</option>
